voting-app-k8s/artifacts/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-result
spec:
  hosts:
  - result.com
  gateways:
  - gateway-istio
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-result
        subset: result-32-0-0-B1
        port:
          number: 5001
      weight: 100
